[gd_scene load_steps=21 format=2]

[ext_resource path="res://content/shared/Usable.tscn" type="PackedScene" id=1]
[ext_resource path="res://content/dome/station/station_alarm_sheet.png" type="Texture" id=2]
[ext_resource path="res://content/dome/station/Station.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 7, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 14, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 21, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 28, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 35, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 42, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 49, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 63, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 70, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 77, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 84, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 91, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 98, 0, 7, 6 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 105, 0, 7, 6 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Station" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="."]
playing = true

[node name="Usable" parent="." instance=ExtResource( 1 )]

[node name="KeeperPosition" type="Position2D" parent="."]

[node name="WaveAlarm" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
